--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
 </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 </html>
